--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -37,7 +37,7 @@ include ../scriptsAndStyles
                             small #{member.user.email}
                         td= formatMoney(member.revenue_share, member.revenue_share_unit)
                         td= formatRole(member.role)
-                        td #{member.id != undefined ? 'Active' : 'Invited'}
+                        td #{member.status ? member.status : (member.id ? 'Active' : 'Invited')}
                         td(style='text-align: center;')
                             if (member.id != undefined && (member.deleted == null || member.deleted == 0))
                                 a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == logged_in_user.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
