--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -1,3 +1,11 @@
 extends header
 
 block append body
+    .container-fluid
+    .row-fluid
+        .col-md-2
+        .col-md-8
+            form(method='post')
+                .form-group
+                    input.btn.btn-primary.btn-lg(type='submit', value='NEXT')
+        .col-md-2
