--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -30,6 +30,7 @@ include ../scriptsAndStyles
                         th.col-md-1 Actions
                 tbody
                 each member in integrationMembers
+                    if (member.status != 'Registered')
                     tr(class=((member.deleted == null || member.deleted == 0) ? (member.id != undefined ? '' : 'active') : 'danger'))
                         td
                             label= formatName(member.user.first_name, member.user.last_name)
@@ -37,7 +38,7 @@ include ../scriptsAndStyles
                             small #{member.user.email}
                         td= formatMoney(member.revenue_share, member.revenue_share_unit)
                         td= formatRole(member.role)
-                        td #{member.status ? member.status : (member.id ? 'Active' : 'Invited')}
+                        td #{member.user.status ? formatUserStatus(member.user.status) : 'Pending'}
                         td(style='text-align: center;')
                             if (member.id != undefined && (member.deleted == null || member.deleted == 0))
                                 a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == logged_in_user.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
