--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -30,18 +30,18 @@ include ../scriptsAndStyles
                         th.col-md-1 Actions
                 tbody
                 each member in integrationMembers
-                    if (member.status != 'Registered')
-                    tr(class=((member.deleted == null || member.deleted == 0) ? (member.id != undefined ? '' : 'active') : 'danger'))
-                        td
-                            label= formatName(member.user.first_name, member.user.last_name)
-                            br
-                            small #{member.user.email}
-                        td= formatMoney(member.revenue_share, member.revenue_share_unit)
-                        td= formatRole(member.role)
-                        td #{member.user.status ? formatUserStatus(member.user.status) : 'Pending'}
-                        td(style='text-align: center;')
-                            if (member.id != undefined && (member.deleted == null || member.deleted == 0))
-                                a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == logged_in_user.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
+                    if (member.user.status != 'Registered')
+                        tr(class=((member.deleted == null || member.deleted == 0) ? (member.id != undefined ? '' : 'active') : 'danger'))
+                            td
+                                label= formatName(member.user.first_name, member.user.last_name)
+                                br
+                                small #{member.user.email}
+                            td= formatMoney(member.revenue_share, member.revenue_share_unit)
+                            td= formatRole(member.role)
+                            td #{member.user.status ? formatUserStatus(member.user.status) : 'Pending'}
+                            td(style='text-align: center;')
+                                if (member.id != undefined && (member.deleted == null || member.deleted == 0))
+                                    a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == logged_in_user.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
         .col-md-2
 
 #inviteUserModal.modal.fade(style='display: none;')
