--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -38,7 +38,10 @@ include ../scriptsAndStyles
                                 small #{member.user.email}
                             td= formatMoney(member.revenue_share, member.revenue_share_unit)
                             td= formatRole(member.role)
-                            td #{member.user.status ? formatUserStatus(member.user.status) : 'Pending'}
+                            td
+                                | #{member.user.status ? formatUserStatus(member.user.status) : 'Pending'}
+                                if (!member.user.status)
+                                    a.btn.btn-xs.btn-default.sendAgain(data-emailid=member.user.email) Send Again
                             td(style='text-align: center;')
                                 if (member.id != undefined && (member.deleted == null || member.deleted == 0))
                                     a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == logged_in_user.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
@@ -121,6 +124,6 @@ include footer
 
 script.
     var members = JSON.parse( '!{JSON.stringify(integrationMembers)}' );
-    var integrationId = !{integration.id};
+    var integrationId = '!{integration.id}';
 
 script(src='/js/app/dashboard/integrationUsers.js')
