--- a/views/expertRegistration/header.jade
+++ b/views/expertRegistration/header.jade
@@ -6,5 +6,6 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
         .col-md-8
             h3
                 | #{integration.title}
-                small &nbsp;Expert Registration
+                small &nbsp;Expert Registration huhas
+            block content
         .col-md-2
