--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -1,4 +1,5 @@
 doctype html
+include ../scriptsAndStyles
 meta(name='viewport', content='width=device-width, initial-scale=1')
 .container-fluid
     .row-fluid
@@ -14,5 +15,6 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
                         if (logged_in_user)
                             | Hey #{logged_in_user.first_name}
                             a.btn.btn-link(href='/logout') Logout
+            hr
+            block content
         .col-md-2
-hr
