--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -29,7 +29,7 @@ include ../scriptsAndStyles
                         th.col-md-1 Status
                         th.col-md-1 Actions
                 tbody
-                each member in integrationMembers
+                each member in members
                     if (member.user.status != 'Registered')
                         tr(class=((member.deleted == null || member.deleted == 0) ? (member.id != undefined ? '' : 'active') : 'danger'))
                             td
@@ -44,7 +44,7 @@ include ../scriptsAndStyles
                                     a.btn.btn-xs.btn-default.sendAgain(data-emailid=member.user.email) Send Again
                             td(style='text-align: center;')
                                 if (member.id != undefined && (member.deleted == null || member.deleted == 0))
-                                    a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == logged_in_user.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
+                                    a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=(member.user.id == loggedInUser.id ? DashboardUrls.memberProfile(member.id) : '#editUserModal'))
         .col-md-2
 
 #inviteUserModal.modal.fade(style='display: none;')
