--- a/views/dashboard/memberEmployment.jade
+++ b/views/dashboard/memberEmployment.jade
@@ -114,6 +114,6 @@ include ../scriptsAndStyles
                 button.btn.btn-default(data-dismiss='modal') No
                 button.btn.btn-primary(onclick='handleDeleteClicked(event)') Yes
 script.
-    var memberId = !{memberId};
+    var memberId = '!{memberId}';
     var userEmployment = JSON.parse( '!{JSON.stringify(userEmployment)}' );
 script(src='/js/app/dashboard/memberEmployment.js')
