Logout button in dasboard header

--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -12,8 +12,8 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
                         small &nbsp;Alpha
                 .col-md-5
                     p.pull-right
-                        if (logged_in_user)
-                            | Hey #{logged_in_user.first_name}
+                        if (loggedInUser)
+                            | Hey #{loggedInUser.first_name}
                             a.btn.btn-link(href='/logout') Logout
             hr
             block content
