SessionData sorted out

--- a/views/contextualHeader.jade
+++ b/views/contextualHeader.jade
@@ -1,3 +1,4 @@
+include scriptsAndStyles
 if (context == 'expertRegistration')
     include expertRegistration/header
 else if (context == 'callFlow')
