--- a/views/expertRegistration/authenticate.jade
+++ b/views/expertRegistration/authenticate.jade
@@ -1,7 +1,7 @@
-title Search N Talk - Expert Registration - Login
-include ../scriptsAndStyles
-extends ../contextualHeader
+extends header
+
 block content
+    title Search N Talk - Expert Registration - Login
     include ../errorMessage
     .row-fluid
         p.h4
@@ -13,7 +13,7 @@ block content
             form#login-form(role='form', action='/expert/login', method='POST')
                 .form-group
                     label(for='username') Email
-                    input.form-control#username(name='username', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.email)
+                    input.form-control#username(name='username', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email)
                 .form-group
                     label(for='login_password') Password
                     input.form-control#login_password(name='password', type='password', data-toggle="tooltip", data-placement="bottom")
@@ -28,7 +28,7 @@ block content
             form#registration-form(action='/expert/register', method='POST')
                 .form-group
                     label(for='email') Email
-                    input.form-control#email(name='email', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.email, autocomplete='off')
+                    input.form-control#email(name='email', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email, autocomplete='off')
                 .form-group
                     label(for='first_name') First Name
                     input.form-control#first_name(name='first_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.first_name, autocomplete='off')
