--- a/views/expertRegistration/header.jade
+++ b/views/expertRegistration/header.jade
@@ -1,4 +1,5 @@
 doctype html
+include ../scriptsAndStyles
 meta(name='viewport', content='width=device-width, initial-scale=1')
 .container-fluid
     .row-fluid
@@ -15,5 +16,6 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
                             | Hey, #{loggedInUser.first_name}
                             a.btn.btn-link(href='/logout') Logout
                             h3
+            hr
             block content
         .col-md-2
