Fixed call flow index page selector

--- a/views/callFlow/header.jade
+++ b/views/callFlow/header.jade
@@ -8,7 +8,9 @@ include ../scriptsAndStyles
             .col-md-2.col-xs-5
                 img.img-polaroid(src='http://www.geovic.net/userfiles/image/Blank%20Profile(1).png', width=80, height=80)
             .left
+                - var user = expert.user[0]
                 h3= formatName(user.first_name, user.last_name)
                 label #{user.short_desc}
+            hr
             block content
         .col-md-2
