Create transaction when landing on payment page

--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -21,9 +21,9 @@ block content
 
     #schedulePickerTemplate(style='display: none;')
         select.dateSelect.form-control(data-width='auto')
-            option(value="-1") Pick a date
+            option(value="-1") Pick a Date
         select.timeSelect.form-control(name='startTime', data-width='auto')
-            option(value="-1") Pick a date
+            option(value="-1") Pick a Time
 
     #loginModal(style='display: none;')
         .form-group
