--- a/views/dashboard/mobileVerification.jade
+++ b/views/dashboard/mobileVerification.jade
@@ -15,7 +15,7 @@ block content
                             option(value='91') India (+91)
                             option(value='1') USA (+1)
                             option(value='65') Singapore (+65)
-                    input(type='text').form-control#phoneNumber
+                    input(type='tel').form-control#phoneNumber
         .form-group
             input.btn.btn-primary.form-control(type='submit', value='Send verification code', name='sendCode')
     form#verifyCode(style='display: none;')
