Abstract Mapping Dao Search with new mapping table

--- a/views/dashboard/memberProfileComplete.jade
+++ b/views/dashboard/memberProfileComplete.jade
@@ -13,7 +13,7 @@ title Expert Profile
                     label.control-label(for='long_desc') Description
                     div #{user.long_desc}
                     label.control-label(for='industry') Industry
-                    normal  - #{industryCodes[user.industry]}
+                    normal  - #{IndustryCodes[user.industry]}
                     br
                     label.control-label(for='birth_day') Date of Birth
                     normal  - #{user.date_of_birth}
